Fixed spacing issue on Health Clock page

--- a/client/src/scss/sections/healthier-lifestyle/_styles.scss
+++ b/client/src/scss/sections/healthier-lifestyle/_styles.scss
@@ -131,7 +131,7 @@ and open the template in the editor.
 
                     .experience {
                         .watch {
-                            margin-top: 100px;
+                            margin-top: 170px;
                             width: 100%;
                             //height: 530px;
 
